--- a/ListViewDraggingAnimation/AndroidManifest.xml
+++ b/ListViewDraggingAnimation/AndroidManifest.xml
@@ -7,7 +7,7 @@
               android:targetSdkVersion="17"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
         android:hardwareAccelerated="true">
-        <activity android:name="com.example.android.listviewdragginganimation.ListViewDraggingActivity"
+        <activity android:name="com.birdy.dynamiclistview.ListViewDraggingActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
