--- a/ListViewDraggingAnimation/AndroidManifest.xml
+++ b/ListViewDraggingAnimation/AndroidManifest.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.birdy.dynamiclistview"
-          android:versionCode="2"
-          android:versionName="1.0.2">
-    <uses-sdk android:minSdkVersion="8"
-              android:targetSdkVersion="19"/>
-    <application android:label="@string/app_name" 
+    package="com.birdy.dynamiclistview"
+    android:versionCode="2"
+    android:versionName="1.0.2" >
+
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
+
+    <application
+        android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
-        android:hardwareAccelerated="true" 
-        android:allowBackup="true">
-        <activity android:name="com.birdy.dynamiclistview.ListViewDraggingActivity"
-                  android:label="@string/app_name">
+        android:label="@string/app_name" >
+        <activity
+            android:name="com.birdy.dynamiclistview.ListViewDraggingActivity"
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
